analyse des expressions en entier